fix: alignment discord header

--- a/public/styles/helpers/_navigation.scss
+++ b/public/styles/helpers/_navigation.scss
@@ -104,7 +104,7 @@
   }
 
   &.site-header-nav-icon {
-    border-bottom: 2px solid transparent;
+    border-bottom: 4px solid transparent;
   }
 
   &.bordered {
